prevent overlapping components in UI

--- a/src/main/resources/static/stylesheets/style.css
+++ b/src/main/resources/static/stylesheets/style.css
@@ -69,8 +69,8 @@ p {
     background-color: #00004d;
     width: 100%;
     height: 70px;
-    z-index: 100;
     position: fixed;
+    z-index: 0;
     top: 0;
     left: 0;
 }
